vcluster_versioned_docs/version-0.21.0/_fragments/sync-to-host-resources.mdx
vCluster syncs specific Kubernetes resources from the virtual cluster to the host cluster. vCluster 
expects these resources to be created in the virtual cluster and updated in the virtual cluster. Besides native 
Kubernetes resources, custom resources can also be synced. 

### Enabled by default
* [Pods](/vcluster/configure/vcluster-yaml/sync/to-host/core/pods)
* [Secrets](/vcluster/configure/vcluster-yaml/sync/to-host/core/secrets)
* [ConfigMaps](/vcluster/configure/vcluster-yaml/sync/to-host/core/config-maps)
* [Services](/vcluster/configure/vcluster-yaml/sync/to-host/networking/services)
* [Endpoints](/vcluster/configure/vcluster-yaml/sync/to-host/networking/endpoints)
* [PersistentVolumeClaims](/vcluster/configure/vcluster-yaml/sync/to-host/storage/persistent-volume-claims)

### Disabled by default
* [CustomResources](/vcluster/configure/vcluster-yaml/sync/to-host/advanced/custom-resources)
* [Ingresses](/vcluster/configure/vcluster-yaml/sync/to-host/networking/ingresses)
* [NetworkPolicies](/vcluster/configure/vcluster-yaml/sync/to-host/networking/network-policies)
* [PersistentVolumes](/vcluster/configure/vcluster-yaml/sync/to-host/storage/persistent-volumes)
* [VolumeSnapshots](/vcluster/configure/vcluster-yaml/sync/to-host/storage/volume-snapshots)
* [StorageClasses](/vcluster/configure/vcluster-yaml/sync/to-host/storage/storage-classes)
* [ServiceAccounts](/vcluster/configure/vcluster-yaml/sync/to-host/advanced/service-accounts)
* [PodDisruptionBudgets](/vcluster/configure/vcluster-yaml/sync/to-host/advanced/pod-disruption-budgets)
* [PriorityClasses](/vcluster/configure/vcluster-yaml/sync/to-host/advanced/priority-classes)
* [Custom Resources](/vcluster/configure/vcluster-yaml/sync/to-host/advanced/custom-resources)

### Bi-directional syncing

For all resources synced from the virtual cluster to the host cluster, metadata labels and metadata annotations are synced in both directions. This means that not only changes in the 
virtual cluster are reflected in the host cluster, but changes in host cluster are reflected in the virtual cluster. 

:::warning vCluster specific Labels
Any labels pre-fixed with `vcluster.loft.sh` on the host resources should not be updated by the user. These labels are used by the vCluster control plane to manage the resources and to avoid conflicts.
:::

#### Additional  Fields that support bi-directionally sync

All `metadata.labels` and `metadata.annotations` support bi-directional sync for any resources being synced to the host cluster. 
In addition to those fields, there are several other fields that vCluster supports bi-directional sync. 

| Resource | Fields |
| --- | --- |
| Pods | <ul><li> status.conditions </li></ul> |
| Secrets | <ul><li> spec.data </li><li> type </li></ul> |  
| ConfigMaps | <ul><li> spec.data </li><li> spec.binaryData </li></ul> |
| Services | <ul><li> spec.externalIPs </li><li> spec.loadBalancerIP </li><li> spec.ports </li><li> spec.publishNotReadyAddresses </li><li> spec.type </li><li> spec.externalName </li><li> spec.externalTrafficPolicy </li><li> spec.sessionAffinity </li><li> spec.sessionAffinityConfig </li><li> spec.loadBalancerSourceRanges </li><li> spec.healthCheckNodePort </li><li> spec.selector </li></ul> 
| Ingresses | <ul><li> spec.ingressClassName </li></ul> |
| PersistentVolumes |  <ul><li>spec.persistentVolumeSource </li><li>spec.capacity  </li><li> spec.accessModes  </li><li> spec.persistentVolumeReclaimPolicy  </li><li> spec.nodeAffinity  </li><li> spec.volumeMode  </li><li> spec.mountOptions  </li></ul> | 
| StorageClass | <ul><li> spec.provisioner </li><li> spec.parameters</li><li> spec.reclaimPolicy </li><li> spec.mountOptions </li><li> spec.allowVolumeExpansion </li><li> spec.volumeBindingMode </li><li> spec.allowedTopologies </li></ul> |

